--- a/minus.css
+++ b/minus.css
@@ -30,6 +30,7 @@ div#canvases{
 canvas#2dcanvas {
 	z-index: 1;
 	position:absolute;
+    visibility: hidden;
 	left:0px;
 	top:0px;
 }
@@ -37,6 +38,7 @@ canvas#2dcanvas {
 canvas#glcanvas {
 	z-index: 2;
 	position:absolute;
+    visibility: hidden;
 	left:0px;
 	top:0px;
 }
